v-splash and html overflow bug 03

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -12,15 +12,17 @@ body,
 html {
   width: 100vw;
 
-  height: fit-content;
+  height: 100vh;
   margin: 0 !important;
   padding: 0px !important;
   /* font-family: "Silkscreen"; */
   background-color: #ffffff;
   font-family: "Mulish", sans-serif;
   scroll-behavior: smooth;
-  overflow: hidden;
- 
+}
+
+html{
+  /* overflow: hidden!important; */
 }
 
 img {
@@ -46,8 +48,9 @@ img {
   height: 100%;
   width: 100vw;
   z-index: 9999;
-  background-color: rgb(255, 255, 255);
-  overflow: hidden;
+  background-color: #e2ddffc9;
+  backdrop-filter: blur(29px);
+  
 }
 
 
